Inclusion de formulario de grupos al validar guardias cuando es guardia de grupos. INC- Solicitar grupo cuando se valida inscripción de guardia configurada por grupos